# earthcode-library

./: .gitignore  LICENSE  README.md  _config.yml  _toc.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
cli/: generate_embeddings.py
docs/: contributing_to_the_osc.md  fairtool.md
docs/guides/: 0.Prerequisites-local.ipynb  1.Project.ipynb  2.0.Product.ipynb  2.1.Product_files_self_hosted.ipynb  3.Workflow.ipynb  4.Experiment.ipynb
docs/tutorials/: cog_file_metadata_creation.ipynb  end_to_end_subglacial_lakes.ipynb  parquet_file_metadata.ipynb  zarr_file_metadata.ipynb
earthcode/: __init__.py  experiment_generator.py  fairtool.py  git_add.py  product_generator.py  project_generator.py  search.py  stac_generator.py  static.py  template_generator.py  validator.py  workflow_generator.py
earthcode/generators/: __init__.py  experiment_generator.py  product_generator.py  project_generator.py  stac_generator.py  template_generator.py  workflow_generator.py
earthcode/generators/templates/: experiment.yaml  product.yaml  workflow.yaml
earthcode/templates/: experiment.yaml  product.yaml  project.yaml
examples/: contribute_via_osc_editor.ipynb  contribute_via_pr_osc.ipynb  earthcode_data_discovery.ipynb
guide/: 0.Prerequisites-EarthCODE-Workspaces.ipynb  0.Prerequisites-local.ipynb  0.Prerequisites.ipynb  1.Project.ipynb  2.0.Product.ipynb  2.1.Product_files_PRR.ipynb  2.1.Product_files_self_hosted.ipynb  3.Workflow.ipynb  4.Experiment.ipynb  5.Templates.ipynb
tests/: test_creation.py  test_fairtool.py  test_notebooks.py  test_search.py  test_stac_generator.py  test_template_generator.py  test_utils.py  test_valid_generators.py  test_validation.py  test_validation_templates.py
